missing comments for _virDomainBlockStats fields * include/libvirt/libvirt.h include/libvirt/libvirt.h.in:   missing comments for _virDomainBlockStats fields * docs/*: rebuilt docs Daniel

--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -201,10 +201,10 @@ int	virDomainSetSchedulerParameters	(virDomainPtr domain,
 typedef struct _virDomainBlockStats virDomainBlockStatsStruct;
 
 struct _virDomainBlockStats {
-  long long rd_req;
-  long long rd_bytes;
-  long long wr_req;
-  long long wr_bytes;
+  long long rd_req; /* number of read requests */
+  long long rd_bytes; /* number of read bytes */
+  long long wr_req; /* number of write requests */
+  long long wr_bytes; /* numbber of written bytes */
   long long errs;   /* In Xen this returns the mysterious 'oo_req'. */
 };
 
