* NEWS virsh.1 docs//* include/libvirt/libvirt.h[.in] qemud/mdns.h   src/libvirt.c src/qemu.conf src/remote_internal.c src/xend_internal.c   tests/confdata/libvirtd.conf tests/confdata/libvirtd.out: patch from   Atsushi SAKAI fixing a ot more typo Daniel

--- a/src/qemu.conf
+++ b/src/qemu.conf
@@ -17,7 +17,7 @@
 # Examples include vinagre, virt-viewer, virt-manager and vencrypt
 # itself. UltraVNC, RealVNC, TightVNC do not support this
 #
-# It is neccessary to setup CA and issue a server certificate
+# It is necessary to setup CA and issue a server certificate
 # before enabling this.
 #
 # vnc_tls = 1
