* src/xend_internal.c: applied patch from Saori Fukuta adding the   scheduler API for the Xen daemon driver * po/POTFILES.in: add the two new linux container modules Daniel

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -6,6 +6,8 @@ src/console.c
 src/hash.c
 src/iptables.c
 src/libvirt.c
+src/lxc_conf.c
+src/lxc_driver.c
 src/proxy_internal.c
 src/qemu_conf.c
 src/qemu_driver.c
