--- a/Makefile.maint
+++ b/Makefile.maint
@@ -298,8 +298,31 @@ sc_two_space_separator_in_usage:
 	    echo "$(ME): an option and its description"; \
 		1>&2; exit 1; } || :
 
-err_func_re = \
-(DISABLE_fprintf|qemudLog|(xmlRpc|vir(Xend|XML|Hash|Conf|Test|LibConn|StorageReport|lxc))Error)
+msg_gen_function =
+msg_gen_function += DISABLE_fprintf
+msg_gen_function += virXendError
+msg_gen_function += virXMLError
+msg_gen_function += virHashError
+msg_gen_function += virConfError
+msg_gen_function += virTestError
+msg_gen_function += virLibConnError
+msg_gen_function += virStorageReportError
+msg_gen_function += virxmlRpcError
+msg_gen_function += virLog
+msg_gen_function += qemudLog
+msg_gen_function += remoteDispatchError
+msg_gen_function += virStorageLog
+
+# msg_gen_function += xenXMError
+# msg_gen_function += virXenError
+# msg_gen_function += ReportError
+# msg_gen_function += testError
+# msg_gen_function += openvzLog
+# msg_gen_function += qemudReportError
+# msg_gen_function += error
+
+func_or := $(shell printf '$(msg_gen_function)'|tr -s '[[:space:]]' '|')
+func_re := ($(func_or))
 
 # Look for diagnostics that aren't marked for translation.
 # This won't find any for which error's format string is on a separate line.
@@ -308,12 +331,12 @@ err_func_re = \
 #    "%s", _("no storage vol w..."
 sc_unmarked_diagnostics:
 	@grep -nE							\
-	    '\<(vshError|error) \([^"]*"[^"]*[a-z]{3}' $$($(VC_LIST_EXCEPT)) \
+            '\<$(func_re) \([^"]*"[^"]*[a-z]{3}' $$($(VC_LIST_EXCEPT))	\
 	  | grep -v '_''(' &&						\
 	  { echo '$(ME): found unmarked diagnostic(s)' 1>&2;		\
 	    exit 1; } || :
-	@{ grep     -nE '\<$(err_func_re) *\(.*;$$' $$($(VC_LIST_EXCEPT));   \
-	   grep -A1 -nE '\<$(err_func_re) *\(.*,$$' $$($(VC_LIST_EXCEPT)); } \
+	@{ grep     -nE '\<$(func_re) *\(.*;$$' $$($(VC_LIST_EXCEPT));   \
+	   grep -A1 -nE '\<$(func_re) *\(.*,$$' $$($(VC_LIST_EXCEPT)); } \
 	   | sed 's/_("[^"][^"]*"//;s/[	 ]"%s"//'			\
 	   | grep '[	 ]"' &&						\
 	  { echo '$(ME): found unmarked diagnostic(s)' 1>&2;		\
