--- a/Makefile.maint
+++ b/Makefile.maint
@@ -313,9 +313,9 @@ msg_gen_function += qemudLog
 msg_gen_function += remoteDispatchError
 msg_gen_function += virStorageLog
 msg_gen_function += xenXMError
+msg_gen_function += ReportError
 
 # msg_gen_function += virXenError
-# msg_gen_function += ReportError
 # msg_gen_function += testError
 # msg_gen_function += openvzLog
 # msg_gen_function += qemudReportError
