--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,6 +8,8 @@ src/iptables.c
 src/libvirt.c
 src/lxc_conf.c
 src/lxc_driver.c
+src/openvz_conf.c
+src/openvz_driver.c
 src/proxy_internal.c
 src/qemu_conf.c
 src/qemu_driver.c
