openvzLog: mark its string arguments for translation
* Makefile.maint (msg_gen_function): Add openvzLog.
* src/openvz_conf.c (openvzAssignVMDef, openvzParseXML): Mark strings.
* src/openvz_driver.c (openvzDomainShutdown, openvzDomainReboot):
(openvzDomainDefineXML, openvzDomainCreateLinux):
(openvzDomainCreate, openvzDomainUndefine): Likewise.

--- a/Makefile.maint
+++ b/Makefile.maint
@@ -315,13 +315,13 @@ msg_gen_function += virStorageLog
 msg_gen_function += xenXMError
 msg_gen_function += ReportError
 msg_gen_function += qemudReportError
+msg_gen_function += openvzLog
 
 # Uncomment this after adjusting remaining diagnostics to be translatable.
 # msg_gen_function += error
 
 # msg_gen_function += virXenError
 # msg_gen_function += testError
-# msg_gen_function += openvzLog
 
 func_or := $(shell printf '$(msg_gen_function)'|tr -s '[[:space:]]' '|')
 func_re := ($(func_or))
