Add virsh.pod to EXTRA_DIST         * docs/Makefile.am: Add virsh.pod to EXTRA_DIST.

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -61,7 +61,8 @@ EXTRA_DIST=					\
   libvirt-api.xml libvirt-refs.xml apibuild.py	\
   site.xsl newapi.xsl news.xsl		\
   $(dot_html) $(gif) html			\
-  $(xml) $(rng)
+  $(xml) $(rng) \
+  virsh.pod
 
 all: web $(top_builddir)/NEWS $(man_MANS)
 
