--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -61,16 +61,20 @@ CLIENT_SOURCES =						\
 		openvz_driver.c openvz_driver.h			\
 		lxc_driver.c lxc_driver.h			\
 		lxc_conf.c lxc_conf.h				\
-		lxc_container.c lxc_container.h				\
+		lxc_container.c lxc_container.h			\
                 nodeinfo.h nodeinfo.c                           \
-		storage_conf.h storage_conf.c			\
-		storage_driver.h storage_driver.c		\
-		storage_backend.h storage_backend.c		\
-		storage_backend_fs.h storage_backend_fs.c	\
 		util.c util.h
 
 SERVER_SOURCES =						\
 		../qemud/remote_protocol.c ../qemud/remote_protocol.h
+
+if WITH_LIBVIRTD
+
+CLIENT_SOURCES += 						\
+		storage_conf.h storage_conf.c			\
+		storage_driver.h storage_driver.c		\
+		storage_backend.h storage_backend.c		\
+		storage_backend_fs.h storage_backend_fs.c
 
 if WITH_STORAGE_LVM
 CLIENT_SOURCES += storage_backend_logical.h storage_backend_logical.c
@@ -90,7 +94,7 @@ else
 EXTRA_DIST += storage_backend_disk.h storage_backend_disk.c
 endif
 
-
+endif
 
 
 libvirt_la_SOURCES = $(CLIENT_SOURCES) $(SERVER_SOURCES)
@@ -130,12 +134,14 @@ virsh_LDADD = $(LDADDS) $(VIRSH_LIBS)
 virsh_CFLAGS = $(COVERAGE_CFLAGS) $(READLINE_CFLAGS)
 
 if WITH_STORAGE_DISK
+if WITH_LIBVIRTD
 libexec_PROGRAMS = libvirt_parthelper
 
 libvirt_parthelper_SOURCES = parthelper.c
 libvirt_parthelper_LDFLAGS = $(WARN_CFLAGS) $(COVERAGE_LDCFLAGS)
 libvirt_parthelper_LDADD = $(LIBPARTED_LIBS)
 libvirt_parthelper_CFLAGS =  $(LIBPARTED_CFLAGS)
+endif
 else
 EXTRA_DIST += parthelper.c
 endif
